--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,2 +1,41 @@
-# see documentation at
-# https://www.digitalocean.com/community/tutorials/containerizing-a-node-js-application-for-development-with-docker-compose-pt
+version: "3"
+services:
+  server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: nodejs-server
+    container_name: ${PROJECT_NAME}-server
+    restart: unless-stopped
+    env_file: .env
+    ports:
+      - "${SERVER_PORT}:8080"
+    volumes:
+      - .:/home/node/app
+      - node_modules:/home/node/app/node_modules
+    command: yarn dev
+    depends_on:
+      - db
+
+  db:
+    image: postgres
+    container_name: ${PROJECT_NAME}-db
+    restart: unless-stopped
+    env_file: .env
+    environment:
+      - POSTGRES_USER=${DATABASE_USER}
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+      - POSTGRES_DB=${DATABASE_DB}
+      - PGDATA=/var/lib/postgresql/data/pgdata
+    ports:
+      - "${DATABASE_PORT}:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata:
+  node_modules:
+
+    # Documentação usada para a construção desse arquivo
+    # https://www.digitalocean.com/community/tutorials/containerizing-a-node-js-application-for-development-with-docker-compose-pt
+    # (principalmente o passo 4)
