--- a/package.json
+++ b/package.json
@@ -27,8 +27,21 @@
     "@babel/register": "^7.18.9",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.36.2",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^2.0.19",
-    "typescript": "^4.8.2"
+    "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "*"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.18.6",
