--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   },
   "author": "",
   "scripts": {
-    "dev": "node index.js",
+    "dev": "./node_modules/.bin/ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "start": "node index.js",
     "types": "tsc",
-    "build": "babel src --out-dir lib --copy-files --extensions '.ts,.js'"
+    "build": "babel src --out-dir lib --copy-files --extensions '.ts,.js'",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "migration": "yarn ts-node ./node_modules/typeorm/cli.js migration:run",
+    "generate": "yarn ts-node ./node_modules/typeorm/cli.js migration:generate -n",
+    "undo": "yarn ts-node ./node_modules/typeorm/cli.js migration:revert",
+    "lint": "eslint ./src --ext .ts",
+    "lint:fix": "eslint ./src --ext .ts --fix"
   },
   "license": "ISC",
   "bugs": {
@@ -26,7 +32,7 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/register": "^7.18.9",
     "@types/express": "^4.17.13",
-    "@types/node": "^18.7.14",
+    "@types/node": "^18.7.16",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.36.2",
     "eslint": "^8.0.1",
@@ -41,11 +47,13 @@
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "*"
+    "typescript": "^4.7.3"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.18.9",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "pg": "^8.8.0",
+    "typeorm": "^0.2.37"
   }
 }
