--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
       "allowJs": true,
       "noEmit": true,
       "moduleResolution": "node",
-      "strict": true
+      "strict": true,
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
     },
     "include": [
       "./src/**/*"
