--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/register": "^7.18.9",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -52,7 +53,9 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.18.9",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "pg": "^8.8.0",
     "typeorm": "^0.2.37"
   }
