feature/userTable: user create

--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,8 @@
       "node": 4
     }
   }], "@babel/preset-typescript"],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "plugins": [
+    ["@babel/plugin-transform-runtime"],
+    ["@babel/plugin-proposal-decorators", { "legacy": true }]
+  ]
 }
