--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "scripts": {
     "dev": "./node_modules/.bin/ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
-    "start": "node index.js",
+    "start": "node src/server.ts",
     "types": "tsc",
     "build": "babel src --out-dir lib --copy-files --extensions '.ts,.js'",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
@@ -28,14 +28,17 @@
   "devDependencies": {
     "@babel/cli": "^7.18.10",
     "@babel/core": "^7.18.13",
+    "@babel/plugin-proposal-decorators": "^7.19.0",
     "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/register": "^7.18.9",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.36.2",
+    "cors": "^2.8.5",
     "eslint": "^8.0.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
