--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "generate": "yarn ts-node ./node_modules/typeorm/cli.js migration:generate -n",
     "undo": "yarn ts-node ./node_modules/typeorm/cli.js migration:revert",
     "lint": "eslint ./src --ext .ts",
-    "lint:fix": "eslint ./src --ext .ts --fix"
+    "lint:fix": "eslint ./src --ext .ts --fix",
+    "test": "jest"
   },
   "license": "ISC",
   "bugs": {
@@ -48,6 +49,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.1.1",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "ts-node-dev": "^2.0.0",
@@ -60,6 +62,7 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "pg": "^8.8.0",
+    "supertest": "^6.2.4",
     "typeorm": "^0.2.37"
   }
 }
