fix: eslint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
       }
     },
     "rules": {
+      "import/no-import-module-exports": "off",
+      "import/no-extraneous-dependencies": "off",
       "camelcase": "off",
       "semi": [
         2,
