--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "generate": "yarn ts-node ./node_modules/typeorm/cli.js migration:generate -n",
     "undo": "yarn ts-node ./node_modules/typeorm/cli.js migration:revert",
     "lint": "eslint ./src --ext .ts",
-    "lint:fix": "eslint ./src --ext .ts --fix"
+    "lint:fix": "eslint ./src --ext .ts --fix",
+    "test": "jest"
   },
   "license": "ISC",
   "bugs": {
@@ -58,8 +59,10 @@
     "@babel/runtime": "^7.18.9",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
+    "jest": "^29.1.1",
     "joi": "^17.6.0",
     "pg": "^8.8.0",
+    "supertest": "^6.2.4",
     "typeorm": "^0.2.37"
   }
 }
