feature/jestTest: new db test configured

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     command: yarn dev
     depends_on:
       - db
+      - test-db
 
   db:
     image: postgres
@@ -29,6 +30,21 @@ services:
       - PGDATA=/var/lib/postgresql/data/pgdata
     ports:
       - "${DATABASE_PORT}:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+  
+  test-db:
+    image: postgres
+    container_name: ${PROJECT_NAME}-test-db
+    restart: unless-stopped
+    env_file: .env
+    environment:
+      - POSTGRES_USER=${DATABASE_TEST_USER}
+      - POSTGRES_PASSWORD=${DATABASE_TEST_PASSWORD}
+      - POSTGRES_DB=${DATABASE_TEST_DB}
+      - PGDATA=/var/lib/postgresql/data/pgdata
+    ports:
+      - "${DATABASE_TEST_PORT}:5433"
     volumes:
       - pgdata:/var/lib/postgresql/data
 
